--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,26 @@
 body {
   background-color: white;
 }
+
+.header {
+  margin-left:1%;
+}
+
+.recent {
+  display: flex;
+  margin-left: 1.3%;
+  align-items: center;
+}
+
+.refresh {
+  width: 75px;
+  height: 20px;
+  border: double 2px black;
+  color: black;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  font-weight: 600;
+}
