--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,14 @@ body {
 }
 
 .header {
-  margin-left: 1%;
   margin-bottom: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #1abc9c !important;
+  color: white;
+  height: 23vh !important;
+  
 }
 
 .recent {
@@ -63,4 +69,69 @@ th {
 .align {
   margin-top: 15px;
   float: right;
+}
+.table {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  animation-name: example;
+  animation-duration: 4s;
+}
+
+@keyframes example {
+  0%   {background-color:red; left:0px; top:0px;}
+  25%  {background-color:yellow; left:200px; top:0px;}
+  50%  {background-color:blue; left:200px; top:200px;}
+  75%  {background-color:green; left:0px; top:200px;}
+  100% {background-color:red; left:0px; top:0px;}
+}
+
+.animate {
+  animation: pulse 5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #001F3F;
+  }
+  100% {
+    background-color: #FF4136;
+  }
+}
+
+.demo {
+  background-color: hsl(207, 9%, 19%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10vw;
+  width: 100%;
+}
+
+.perspective-container {
+  perspective: 400px;
+}
+
+.card {
+  background-image: url(https://media.giphy.com/media/sIIhZliB2McAo/giphy.gif);
+  background-size: cover;
+  box-shadow: 0 0 140px 10px rgba(0,0,0,.5);
+  position: relative;
+  height: 150px;
+  width: 250px;
+  overflow: hidden; /* Try removing this to see how the sheen works! */
+  --sheenX: 0; /* Set these with JavaScript */
+  --sheenY: 0;
+}
+
+.card::after {
+  content: "";
+  position: absolute;
+  top: -400px;
+  right: -400px;
+  bottom: -400px;
+  left: -400px;
+  background: linear-gradient(217deg, rgba(255,255,255,0), rgba(255,255,255,0) 35%, rgba(255,255,255,0.25) 45%, rgba(255,255,255,.25) 50%, rgba(255,255,255,0) 60%, rgba(255,255,255,0) 100%);
+  transform: translateX(var(--sheenX)) translateY(var(--sheenY));
 }
