--- a/src/style.css
+++ b/src/style.css
@@ -1,136 +1,3 @@
 body {
-  background-color: white;
-}
-
-.header {
-  margin-bottom: 2%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #1abc9c !important;
-  color: white;
-  height: 23vh !important;
-}
-
-.recent {
-  display: flex;
-  margin-left: 1.3%;
-  align-items: center;
-  justify-content: space-between;
-}
-
-table {
-  margin-left: 1.25%;
-}
-
-th {
-  width: 100px;
-}
-
-.left_side {
-  width: 30%;
-}
-
-.content {
-  display: flex;
-  width: 60%;
-}
-
-.right_side {
-  margin-left: 120px;
-  width: 280px;
-}
-
-.input {
-  margin-bottom: 10px;
-  border: 2px double black;
-  width: 100%;
-}
-
-.submit {
-  width: 75px;
-  height: 30px;
-  border: double 2px black;
-  color: black;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  font-weight: 600;
-  background-color: white;
-}
-
-.align {
-  margin-top: 15px;
-  float: right;
-}
-
-.table {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  position: relative;
-  animation-name: example;
-  animation-duration: 4s;
-  border: solid 2px black;
-}
-
-@keyframes example { /* stylelint-disable-line */
-  0% { background-color: red; left: 0; top: 0; } /* stylelint-disable-line */
-  25% { background-color: yellow; left: 200px; top: 0; } /* stylelint-disable-line */
-  50% { background-color: blue; left: 200px; top: 200px; } /* stylelint-disable-line */
-  75% { background-color: green; left: 0; top: 200px; } /* stylelint-disable-line */
-  100% { background-color: red; left: 0; top: 0; } /* stylelint-disable-line */
-}
-
-.animate {
-  animation: pulse 5s infinite;
-}
-
-@keyframes pulse {
-  0% {
-    background-color: #001f3f;
-  }
-
-  100% {
-    background-color: #ff4136;
-  }
-}
-
-.demo {
-  background-color: hsl(207, 9%, 19%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 10vw;
-  width: 100%;
-}
-
-.perspective-container {
-  perspective: 400px;
-}
-
-.card {
-  background-image: url(https://media.giphy.com/media/sIIhZliB2McAo/giphy.gif);
-  background-size: cover;
-  box-shadow: 0 0 140px 10px rgba(0, 0, 0, 0.5);
-  position: relative;
-  height: 150px;
-  width: 250px;
-  overflow: hidden; /* Try removing this to see how the sheen works! */
-
-  --sheenX: 0; /* Set these with JavaScript */
-  --sheenY: 0;
-}
-
-.card::after {
-  content: "";
-  position: absolute;
-  top: -400px;
-  right: -400px;
-  bottom: -400px;
-  left: -400px;
-  background: linear-gradient(217deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 35%, rgba(255, 255, 255, 0.25) 45%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 60%, rgba(255, 255, 255, 0) 100%);
-  transform: translateX(var(--sheenX)) translateY(var(--sheenY));
+  background-color: green;
 }
