--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,18 @@
-body{
+body {
   background-color: black;
   color: white;
 }
 
 nav {
   height: 10vh;
-  display:flex;
+  display: flex;
   flex-direction: row;
   width: 100%;
   gap: 25%;
   position: fixed;
 }
 
-.logo{
+.logo {
   margin-left: 5%;
   border-radius: 50%;
   border: solid 1px white;
@@ -31,7 +31,7 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;;
+  width: 100%;
   border-top: solid 2px white;
 }
 
