--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: #292929;
   color: white;
   width: 100vw;
   height: 100vh;
@@ -15,6 +15,7 @@ nav {
 
 header{
   height: 10%;
+  display: flex;
 }
 
 .logo {
@@ -31,8 +32,8 @@ li {
 }
 
 footer {
-  background-color: black;
-  height: 18.75%;
+  background-color: #292929;
+  height: 10%;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -42,7 +43,80 @@ footer {
 }
 
 main{
+  display: flex;
   width: 100%;
-  height: 71%;
-  background-color: red;
+  height: 80%;
+  background-color: #616161;
+  overflow-y: scroll;
+}
+
+li {
+  width: 10%
+}
+
+.card-container {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2.5%;
+  display: grid;
+  width: 90%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 5%;
+  row-gap: 5%;
+  margin-bottom: 2.5%;
+}
+
+.card-image {
+  width: 100%;
+  height: 50%;
+}
+
+.card {
+  background-color: #292929;
+  width: 15vw;
+  height: 50vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h5 {
+  height: 5%;
+  text-align: center;
+  font-size: 14px;
+}
+
+.like-genre-container {
+  width: 100%;
+  height: 20%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.button {
+  background-color: #EE2935;
+  border: none;
+  color: white;
+  width: 100%;
+  height: 75%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 5%;
+}
+
+.card-button {
+  height: 25%;
+  width: 100%;
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+
+.fa-star{
+  color: yellow;
+  margin-left: auto;
+  margin-top: 10%;
+  margin-bottom: auto;
+  margin-right: auto;
 }
