--- a/src/style.css
+++ b/src/style.css
@@ -129,14 +129,14 @@ ul {
 
 .card {
   /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   color: black;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 /* Add some padding inside the card container */
@@ -145,9 +145,5 @@ ul {
 }
 
 .movie_picture {
-  width: 15%
-}
-
-.movie_name {
-  
+  width: 15%;
 }
