--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ nav {
   gap: 25%;
 }
 
-header{
+header {
   height: 10%;
   display: flex;
 }
@@ -87,7 +87,7 @@ h5 {
 }
 
 .button {
-  background-color: #EE2935;
+  background-color: #ee2935;
   border: none;
   color: white;
   width: 100%;
