--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,6 @@ main {
   display: flex;
   width: 100%;
   height: 80%;
-  background-color: #616161;
   overflow-y: scroll;
 }
 
@@ -126,7 +125,7 @@ h5 {
 .data {
   width: 42vw;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .genere::after {
