--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,20 @@ main {
   margin-bottom: 2.5%;
 }
 
+.card-container-two {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2.5%;
+  display: grid;
+  width: 90%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 5%;
+  row-gap: 5%;
+  margin-bottom: 2.5%;
+  display: none;
+}
+
 .card-image {
   width: 100%;
   height: 50%;
@@ -197,4 +211,17 @@ textarea {
 textarea::after {
   content: "\a";
   white-space: pre;
+}
+
+table {
+  table-layout: fixed;
+  border: 1px solid black;
+  width: 300px;
+}
+
+td {
+  border: 1px solid black;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
